--- a/les 4 - opdracht/css/custom_styles.css
+++ b/les 4 - opdracht/css/custom_styles.css
@@ -47,13 +47,14 @@ nav.top-nav a:hover {
   padding-top: 90px;
 }
 
-.carousel-inner,
+.carousel,
 .carousel-item {
-  min-height: 350px;
+  height: 350px;
 }
 
 .carousel img {
   object-fit: cover;
+  height: 100%;
 }
 
 .content-section {
